--- a/css/style.css
+++ b/css/style.css
@@ -42,26 +42,21 @@ main {
     font-family: "Hiragino Sans", "ヒラギノ角ゴシック";
 }
 
+ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
 li {
     list-style: none;
     font-size: 15px;
+    display: flex;
+      flex: 1;
+  text-align: center;
 }
 
 .headInfo {
     display: inline-block;
     font-size: 20px;
-    background-color: #CCCCCC;
-}
-
-header {
-    background-color: red;
-}
-
-section {
-    color: #ffffff;
-    background-color: black;
-    padding: 12px;
-    margin: 20px;
-    /*   border: 2px solid red; */
-    /*   border-radius: 5px; */
 }
