--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+header{
+    width: 100%;
+    background-color: #f0f0f0;
+}
+
 body {
     background-color: #FFFFFF;
 }
@@ -7,7 +12,7 @@ body {
 h1 {
     font-family: "Arial Black";
     color: black;
-    font-size: 100px;
+    font-size: 10vw;
     text-align: center;
 }
 
@@ -15,7 +20,21 @@ h2 {
     color: white;
 }
 
-main {
+/* main {
+} */
+
+section{
+    color: white;
+    background-color: black;
+    padding: 20px;
+    margin: 20px;
+}
+
+.container{
+    display: flex;
+}
+
+section ul{
     display: flex;
     flex-direction: column;
 }
@@ -26,12 +45,15 @@ main {
     font-size: 25px;
 }
 
-@media screen and (min-width: 600px) {
-    main {
-        flex-direction: row;
+@media screen and (max-width: 600px) {
+    .container{
+        flex-direction: column;
         font-size: 32px;
     }
 
+    section ul {
+        flex-direction: row;
+    }
     /*   .important{
       font-size: 40px; */
 }
