--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ header{
     background-color: #f0f0f0;
 }
 
+.header-contents{
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
 body {
     background-color: #FFFFFF;
 }
@@ -30,11 +36,11 @@ section{
     color: white;
     background-color: black;
     padding: 20px;
-    margin: 20px;
 }
 
 .container{
     display: flex;
+    gap: 20px;
 }
 
 section ul{
@@ -56,6 +62,7 @@ section ul{
 
     section ul {
         flex-direction: row;
+        gap: 2px;
     }
     /*   .important{
       font-size: 40px; */
