--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@ header{
     max-width: 1024px;
     margin: 0 auto;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-contents ul{
+    display: flex;
+    gap: 10px;
 }
 
 body {
