--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,120 @@
 @charset "UTF-8";
 
+
 header{
-    width: 100%;
-    background-color: #f0f0f0;
+   width: 100%;
+   background-color: #f0f0f0;
 }
+
 
 .header-contents{
-    max-width: 1024px;
-    margin: 0 auto;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
+   max-width: 1024px;
+   margin: 0 auto;
+   padding: 10px;
+   display: flex;
+   justify-content: space-between;
 }
+
 
 .header-contents ul{
-    display: flex;
-    gap: 10px;
+   display: flex;
+   gap: 10px;
 }
+
 
 body {
-    background-color: #FFFFFF;
+   background-color: #FFFFFF;
 }
+
 
 h1 {
-    font-family: "Arial Black";
-    color: black;
-    font-size: 10vw;
-    text-align: center;
+   font-family: "Arial Black";
+   color: black;
+   font-size: 10vw;
+   text-align: center;
 }
+
 
 h2 {
-    color: white;
+   color: white;
 }
+
 
 main {
- padding: 20px;   
+padding: 20px;  
 }
+
 
 section{
-    max-width: 1024px;
-    margin: 20px auto;
-    color: white;
-    background-color: black;
-    padding: 20px;
+   max-width: 1024px;
+   margin: 20px auto;
+   color: white;
+   background-color: black;
+   padding: 20px;
 }
+
 
 .container{
-    display: flex;
-    gap: 20px;
+   display: flex;
+   gap: 20px;
 }
+
 
 section ul{
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
 }
+
 
 .important {
-    /*   color: #990000; */
-    font-weight: bold;
-    font-size: 25px;
+   /*   color: #990000; */
+   font-weight: bold;
+   font-size: 25px;
 }
+
 
 @media screen and (max-width: 600px) {
-    .container{
-        flex-direction: column;
-        font-size: 32px;
-    }
+   .container{
+       flex-direction: column;
+       font-size: 32px;
+   }
 
-    section ul {
-        flex-direction: row;
-        gap: 2px;
-    }
-    /*   .important{
-      font-size: 40px; */
+
+   section ul {
+       flex-direction: row;
+       gap: 2px;
+   }
+   /*   .important{
+     font-size: 40px; */
 }
+
 
 .toWeb {
-    font-weight: bold;
-    font-size: 20px;
-    font-family: "Hiragino Sans", "ヒラギノ角ゴシック";
+   font-weight: bold;
+   font-size: 20px;
+   font-family: "Hiragino Sans", "ヒラギノ角ゴシック";
 }
+
 
 ul {
-    display: flex;
-    list-style: none;
+   display: flex;
+   list-style: none;
 }
+
 
 li {
-    list-style: none;
-    font-size: 15px;
-    display: flex;
+   list-style: none;
+   font-size: 15px;
+   display: flex;
 }
 
+
 .headInfo {
-    display: inline-block;
-    font-size: 20px;
+   display: inline-block;
+   font-size: 20px;
+}
+
+
+.buttonImg{
+   width: 150px;
 }
