--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,14 @@ header{
    padding: 10px;
    display: flex;
    justify-content: space-between;
+   align-items: center;
 }
 
 
 .header-contents ul{
    display: flex;
    gap: 10px;
+   align-items: center;
 }
 
 
